Perkin-UAT/force-app/main/default/objects/SMAX_PS_Location_Approved_TPV__c/SMAX_PS_Location_Approved_TPV__c.object-meta.xml
<CustomObject>
    <label>Location Approved TPV</label>
    <nameField>
        <label>Location Approved TPV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Approved TPVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>