Perkin-UAT/force-app/main/default/objects/SMAX_PS_Location_Approved_TPV__c/fields/SMAX_PS_Active__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>