Perkin-UAT/force-app/main/default/objects/SMAX_PS_Location_Approved_TPV__c/fields/SMAX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Location Approved TPVs</relationshipLabel>
    <relationshipName>SMAX_PS_Location_Approved_TPVs</relationshipName>
    <type>Lookup</type>
</CustomField>