Perkin-UAT/force-app/main/default/objects/SMAX_PS_Location_Approved_TPV__c/fields/SMX_PS_Third_Party_Vendor__c.field-meta.xml
<CustomField>
    <fullName>SMX_PS_Third_Party_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Location Approved TPVs (Third Party Vendor)</relationshipLabel>
    <relationshipName>Location_Approved_TPVs1</relationshipName>
    <type>Lookup</type>
</CustomField>